Fix styling css issues on mobile screens home page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,7 +67,7 @@ h2 {
 }
 
 .main-logo-link {
-    width: fit-content;
+    width: auto;
 }
 
 .white_hr {
@@ -257,7 +257,7 @@ footer a:hover {
 #mc_embed_signup {
     clear: left;
     font-family: 'Quicksand', sans-serif;
-    width: 600px;
+    width: 100%;
 }
 
 #mce-EMAIL {
@@ -411,8 +411,8 @@ footer a:hover {
     }
 
     body {
-        height: calc(80vh - 130px);
-        background: url('/media/mobile_homepage_portrait.jpg') no-repeat center center fixed;
+        height: calc(100vh - 130px);
+        background: url('/media/mobile_homepage_portrait4.jpg') no-repeat center center fixed;
     }
 
     .display-4.logo-font.text-brown {
@@ -460,9 +460,7 @@ footer a:hover {
     }
 
     .main-logo {
-        font-size: 2rem;
-        margin-left: 18px;
-        margin-right: 72px;
+        font-size: 1.5rem;
     }
 
     .sign-up {
